starting the API
